--- a/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
+++ b/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
@@ -787,7 +787,10 @@
       "\t Val. Loss: 6.224 |  Val. PPL: 504.511\n",
       "Epoch: 02 | Time: 167m 18s\n",
       "\tTrain Loss: 6.328 | Train PPL: 560.136\n",
-      "\t Val. Loss: 6.191 |  Val. PPL: 488.269\n"
+      "\t Val. Loss: 6.191 |  Val. PPL: 488.269\n",
+      "Epoch: 03 | Time: 170m 40s\n",
+      "\tTrain Loss: 6.135 | Train PPL: 461.653\n",
+      "\t Val. Loss: 6.175 |  Val. PPL: 480.680\n"
      ]
     }
    ],
