creating zipped file

--- a/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
+++ b/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io\n",
+    "import zipfile\n",
+    "def download_extract_zip(url):\n",
+    "    \"\"\"\n",
+    "    Download a ZIP file and extract its contents in memory\n",
+    "    yields (filename, file-like object) pairs\n",
+    "    \"\"\"\n",
+    "    response = requests.get(url)\n",
+    "    with zipfile.ZipFile(io.BytesIO(response.content)) as thezip:\n",
+    "        for zipinfo in thezip.infolist():\n",
+    "            with thezip.open(zipinfo) as thefile:\n",
+    "                yield zipinfo.filename, thefile\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,16 +42,6 @@
     "\n",
     "<li><a href=\"#acknowledgement\">Acknowledgement</a></li>\n",
     "</ol>\n",
-    "<li><a href=\"#basic-usage\">Basic Usage</a><ul>\n",
-    "<li><a href=\"#prerequisites\">Prerequisites</a></li>\n",
-    "<li><a href=\"#core-training-options\">Core Training Options</a></li>\n",
-    "<li><a href=\"#standard-train-for-identifying-early-bird-tickets\">Standard Train for Identifying Early-Bird Tickets</a></li>\n",
-    "<li><a href=\"#retrain-to-restore-accuracy\">Retrain to Restore Accuracy</a></li>\n",
-    "<li><a href=\"#low-precision-search-and-retrain\">Low Precision Search and Retrain</a></li>\n",
-    "</ul>\n",
-    "</li>\n",
-    "<li><a href=\"#citation\">Citation</a></li>\n",
-    "\n",
     "</div>\n",
     "\n",
     "<a id=\"introduction\"></a>\n",
