modified jupyter notebook

--- a/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
+++ b/ig_en_mt/scripts/Seq2Seq Model for Igbo-English Machine Translation.ipynb
@@ -1,27 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import io\n",
-    "import zipfile\n",
-    "def download_extract_zip(url):\n",
-    "    \"\"\"\n",
-    "    Download a ZIP file and extract its contents in memory\n",
-    "    yields (filename, file-like object) pairs\n",
-    "    \"\"\"\n",
-    "    response = requests.get(url)\n",
-    "    with zipfile.ZipFile(io.BytesIO(response.content)) as thezip:\n",
-    "        for zipinfo in thezip.infolist():\n",
-    "            with thezip.open(zipinfo) as thefile:\n",
-    "                yield zipinfo.filename, thefile\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "fields, exts = (SRC,TRG), ('.ig','.en')\n",
     "train_data, validate_data, test_data = TranslationDataset.splits(fields=fields, exts=exts,\n",
-    "                        path=os.path.join('./..','data/ig_parallel/combined'),\n",
+    "                        path=os.path.join('./..','data'),\n",
     "                        train='train', validation='val', test='test')"
    ]
   },
