Update 1. Seq2Seq MT Model for Igbo-English.ipynb

--- a/ig_en_mt/scripts/1. Seq2Seq MT Model for Igbo-English.ipynb
+++ b/ig_en_mt/scripts/1. Seq2Seq MT Model for Igbo-English.ipynb
@@ -44,7 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Ig-En Evaluation Dataset Usage Demo\n",
+        "# Seq2Seq MT Model for Igbo-English\n",
         "\n",
         "In this work, we discuss our effort toward building a standard evaluation benchmark dataset for Igbo-English machine translation tasks.\n",
         "\n",
