1st completed run 30 epochs

--- a/ig_en_mt/scripts/1. Seq2Seq MT Model for Igbo-English.ipynb
+++ b/ig_en_mt/scripts/1. Seq2Seq MT Model for Igbo-English.ipynb
@@ -24,7 +24,8 @@
       "provenance": [],
       "toc_visible": true,
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -44,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Seq2Seq MT Model for Igbo-English\n",
+        "# Ig-En Evaluation Dataset Usage Demo\n",
         "\n",
         "In this work, we discuss our effort toward building a standard evaluation benchmark dataset for Igbo-English machine translation tasks.\n",
         "\n",
@@ -106,23 +107,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 141
         },
-        "outputId": "413863e4-5573-4583-bff8-ea744bedc0e9"
+        "outputId": "7bae71ee-3e36-4dbf-f216-4fa1cbbc545c"
       },
       "source": [
         "!git clone https://github.com/IgnatiusEzeani/IGBONLP.git"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'IGBONLP'...\n",
-            "remote: Enumerating objects: 153, done.\u001b[K\n",
-            "remote: Counting objects: 100% (153/153), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (117/117), done.\u001b[K\n",
-            "remote: Total 331 (delta 73), reused 99 (delta 35), pack-reused 178\u001b[K\n",
-            "Receiving objects: 100% (331/331), 94.89 MiB | 41.63 MiB/s, done.\n",
-            "Resolving deltas: 100% (153/153), done.\n"
+            "remote: Enumerating objects: 163, done.\u001b[K\n",
+            "remote: Counting objects: 100% (163/163), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (127/127), done.\u001b[K\n",
+            "remote: Total 341 (delta 81), reused 98 (delta 35), pack-reused 178\u001b[K\n",
+            "Receiving objects: 100% (341/341), 94.89 MiB | 35.14 MiB/s, done.\n",
+            "Resolving deltas: 100% (161/161), done.\n"
           ],
           "name": "stdout"
         }
@@ -215,12 +216,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ec400185-2017-4cb8-8b29-176e2f31c50e"
+        "outputId": "cabf122e-4244-4143-a9e8-c648f9575cd6"
       },
       "source": [
         "cd IGBONLP/ig_en_mt/scripts/"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,14 +267,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 70
         },
-        "outputId": "2af15e82-07fa-465b-c0e9-fbfee0f3b53e"
+        "outputId": "dc6cc4d1-5326-41a0-da04-72e99d3d0107"
       },
       "source": [
         "print(f\"{'Training examples':>20s}: {len(train_data.examples)}\")\n",
         "print(f\"{'Validation examples':>20s}: {len(validate_data.examples)}\")\n",
         "print(f\"{'Testing examples':>20s}: {len(test_data.examples)}\")"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,14 +306,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 125
         },
-        "outputId": "31d9bd14-6372-43c9-cd6b-098f07b5b94a"
+        "outputId": "33cbbbd6-d894-4239-a21f-7fe903101574"
       },
       "source": [
         "example0 = vars(train_data.examples[0])\n",
         "example5 = vars(train_data.examples[5])\n",
         "print(f\"Example 0:\\n{example0}\\n\\nExample 5:\\n{example5}\")"
       ],
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,13 +394,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "bcb53b5e-0a4e-40b8-92ec-d3ccfee2098d"
+        "outputId": "249bcdc1-0309-4361-e2e0-4a790e258beb"
       },
       "source": [
         "print(f\"Unique tokens in source (ig) vocabulary: {len(SRC.vocab)}\")\n",
         "print(f\"Unique tokens in target (en) vocabulary: {len(TRG.vocab)}\")"
       ],
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,13 +433,31 @@
       "metadata": {
         "id": "1UBOI1r_39Y7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3d94d371-b7a5-4777-fbc3-cd5cbce18674"
       },
       "source": [
-        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "device"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -723,7 +742,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 247
         },
-        "outputId": "b70a1475-6858-4911-f92b-cd78ed01e8a1"
+        "outputId": "6f625d97-61eb-4fea-d5ac-31c06872681b"
       },
       "source": [
         "def init_weights(m):\n",
@@ -732,7 +751,7 @@
         "        \n",
         "model.apply(init_weights)"
       ],
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +775,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 17
         }
       ]
     },
@@ -779,7 +798,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "12d445e2-71b1-41ab-a9e6-880fc5905d8d"
+        "outputId": "3031320d-f353-43cd-af53-e4e4fe8a7d75"
       },
       "source": [
         "def count_parameters(model):\n",
@@ -787,7 +806,7 @@
         "\n",
         "print(f'The model has {count_parameters(model):,} trainable parameters')"
       ],
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,9 +1061,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 1000
         },
-        "outputId": "eb17f23c-bfef-4e28-8adc-dba0e66b3828"
+        "outputId": "ef58bfda-983b-496a-ca9c-6216f0414956"
       },
       "source": [
         "N_EPOCHS = 30\n",
@@ -1072,12 +1091,103 @@
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')\n",
         "print(f'-----------<Training ended>-----------')"
       ],
-      "execution_count": 0,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "-----------<Training started>-----------\n"
+            "-----------<Training started>-----------\n",
+            "Epoch: 01 | Time: 3m 13s\n",
+            "\tTrain Loss: 6.649 | Train PPL: 772.055\n",
+            "\t Val. Loss: 6.222 |  Val. PPL: 503.549\n",
+            "Epoch: 02 | Time: 3m 14s\n",
+            "\tTrain Loss: 6.306 | Train PPL: 547.772\n",
+            "\t Val. Loss: 6.184 |  Val. PPL: 484.989\n",
+            "Epoch: 03 | Time: 3m 12s\n",
+            "\tTrain Loss: 6.117 | Train PPL: 453.450\n",
+            "\t Val. Loss: 6.174 |  Val. PPL: 480.285\n",
+            "Epoch: 04 | Time: 3m 14s\n",
+            "\tTrain Loss: 5.949 | Train PPL: 383.293\n",
+            "\t Val. Loss: 6.226 |  Val. PPL: 505.855\n",
+            "Epoch: 05 | Time: 3m 13s\n",
+            "\tTrain Loss: 5.796 | Train PPL: 328.974\n",
+            "\t Val. Loss: 6.181 |  Val. PPL: 483.605\n",
+            "Epoch: 06 | Time: 3m 13s\n",
+            "\tTrain Loss: 5.661 | Train PPL: 287.382\n",
+            "\t Val. Loss: 6.169 |  Val. PPL: 477.499\n",
+            "Epoch: 07 | Time: 3m 13s\n",
+            "\tTrain Loss: 5.542 | Train PPL: 255.140\n",
+            "\t Val. Loss: 6.195 |  Val. PPL: 490.181\n",
+            "Epoch: 08 | Time: 3m 14s\n",
+            "\tTrain Loss: 5.435 | Train PPL: 229.265\n",
+            "\t Val. Loss: 6.224 |  Val. PPL: 504.872\n",
+            "Epoch: 09 | Time: 3m 14s\n",
+            "\tTrain Loss: 5.313 | Train PPL: 202.968\n",
+            "\t Val. Loss: 6.246 |  Val. PPL: 515.890\n",
+            "Epoch: 10 | Time: 3m 15s\n",
+            "\tTrain Loss: 5.211 | Train PPL: 183.226\n",
+            "\t Val. Loss: 6.271 |  Val. PPL: 529.183\n",
+            "Epoch: 11 | Time: 3m 14s\n",
+            "\tTrain Loss: 5.082 | Train PPL: 161.016\n",
+            "\t Val. Loss: 6.270 |  Val. PPL: 528.479\n",
+            "Epoch: 12 | Time: 3m 14s\n",
+            "\tTrain Loss: 4.997 | Train PPL: 147.931\n",
+            "\t Val. Loss: 6.274 |  Val. PPL: 530.462\n",
+            "Epoch: 13 | Time: 3m 15s\n",
+            "\tTrain Loss: 4.875 | Train PPL: 131.009\n",
+            "\t Val. Loss: 6.341 |  Val. PPL: 567.423\n",
+            "Epoch: 14 | Time: 3m 15s\n",
+            "\tTrain Loss: 4.788 | Train PPL: 120.019\n",
+            "\t Val. Loss: 6.308 |  Val. PPL: 548.851\n",
+            "Epoch: 15 | Time: 3m 15s\n",
+            "\tTrain Loss: 4.680 | Train PPL: 107.746\n",
+            "\t Val. Loss: 6.321 |  Val. PPL: 556.161\n",
+            "Epoch: 16 | Time: 3m 16s\n",
+            "\tTrain Loss: 4.591 | Train PPL:  98.566\n",
+            "\t Val. Loss: 6.368 |  Val. PPL: 582.694\n",
+            "Epoch: 17 | Time: 3m 14s\n",
+            "\tTrain Loss: 4.485 | Train PPL:  88.712\n",
+            "\t Val. Loss: 6.454 |  Val. PPL: 635.156\n",
+            "Epoch: 18 | Time: 3m 15s\n",
+            "\tTrain Loss: 4.402 | Train PPL:  81.624\n",
+            "\t Val. Loss: 6.628 |  Val. PPL: 756.181\n",
+            "Epoch: 19 | Time: 3m 14s\n",
+            "\tTrain Loss: 4.322 | Train PPL:  75.312\n",
+            "\t Val. Loss: 6.539 |  Val. PPL: 691.657\n",
+            "Epoch: 20 | Time: 3m 12s\n",
+            "\tTrain Loss: 4.240 | Train PPL:  69.377\n",
+            "\t Val. Loss: 6.679 |  Val. PPL: 795.426\n",
+            "Epoch: 21 | Time: 3m 15s\n",
+            "\tTrain Loss: 4.137 | Train PPL:  62.586\n",
+            "\t Val. Loss: 6.686 |  Val. PPL: 800.823\n",
+            "Epoch: 22 | Time: 3m 14s\n",
+            "\tTrain Loss: 4.079 | Train PPL:  59.087\n",
+            "\t Val. Loss: 6.821 |  Val. PPL: 916.627\n",
+            "Epoch: 23 | Time: 3m 15s\n",
+            "\tTrain Loss: 3.990 | Train PPL:  54.033\n",
+            "\t Val. Loss: 6.780 |  Val. PPL: 879.852\n",
+            "Epoch: 24 | Time: 3m 15s\n",
+            "\tTrain Loss: 3.919 | Train PPL:  50.368\n",
+            "\t Val. Loss: 7.016 |  Val. PPL: 1114.723\n",
+            "Epoch: 25 | Time: 3m 14s\n",
+            "\tTrain Loss: 3.844 | Train PPL:  46.708\n",
+            "\t Val. Loss: 6.866 |  Val. PPL: 958.946\n",
+            "Epoch: 26 | Time: 3m 15s\n",
+            "\tTrain Loss: 3.777 | Train PPL:  43.673\n",
+            "\t Val. Loss: 7.022 |  Val. PPL: 1121.042\n",
+            "Epoch: 27 | Time: 3m 12s\n",
+            "\tTrain Loss: 3.701 | Train PPL:  40.496\n",
+            "\t Val. Loss: 7.157 |  Val. PPL: 1283.523\n",
+            "Epoch: 28 | Time: 3m 15s\n",
+            "\tTrain Loss: 3.636 | Train PPL:  37.935\n",
+            "\t Val. Loss: 7.123 |  Val. PPL: 1239.548\n",
+            "Epoch: 29 | Time: 3m 15s\n",
+            "\tTrain Loss: 3.590 | Train PPL:  36.240\n",
+            "\t Val. Loss: 7.124 |  Val. PPL: 1241.748\n",
+            "Epoch: 30 | Time: 3m 14s\n",
+            "\tTrain Loss: 3.505 | Train PPL:  33.266\n",
+            "\t Val. Loss: 7.250 |  Val. PPL: 1408.100\n",
+            "-----------<Training ended>-----------\n"
           ],
           "name": "stdout"
         }
@@ -1098,7 +1208,11 @@
       "metadata": {
         "id": "Z8rdjMM739ak",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "afb4e35c-3d54-4f0d-a8c5-fb4938073c7b"
       },
       "source": [
         "model.load_state_dict(torch.load('igen-model.pt'))\n",
@@ -1107,8 +1221,16 @@
         "\n",
         "print(f'| Test Loss: {test_loss:.3f} | Test PPL: {math.exp(test_loss):7.3f} |')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "| Test Loss: 6.174 | Test PPL: 480.094 |\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1117,7 +1239,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In the following notebook we'll implement a model that achieves improved test perplexity, but only uses a single layer in the encoder and the decoder."
+        "This is our first implementation and, as may be observed, it performed poorly on _validation_ and _test_."
       ]
     }
   ]
